# send_blob

./: .env.example  .gitignore  README.md  pyproject.toml
src/send_blob/: __init__.py  __main__.py
